plugins {
    id 'java'
}

group = 'camp.nextstep.edu'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.assertj:assertj-core:3.25.3'
}

test {
    useJUnitPlatform()
}

/*
아래 설정을 추가해 주지 않으면 제 pc에서는 실행이 되지 않아서 추가했습니다.
 */
tasks.withType(JavaCompile){
    options.encoding = "UTF-8"
}
